# django-rest-api

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  ruff.toml
authapp/: admin.py  models.py  serializer.py  urls.py  views.py
authapp/migrations/: 0001_initial.py
blogapp/: admin.py  models.py  serializer.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_alter_blog_id.py
django-rest-api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
django-rest-api/utils/: custom_token_refresh_view.py  pagination.py
