[project]
name = "django-rest-api"
version = "0.1.0"
description = "Basic django rest api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.5",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
